api-comparision with codegen
